workspace = { members = ["RepeatMacro"] }
[package]
name = "BevyLotsOfSystems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier3d = "0.23.0"
rand = "0.8.5"
RepeatMacro = { path = "RepeatMacro" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#lto = true
#codegen-units = 1